--- a/24pms/views/partial/footer.ejs
+++ b/24pms/views/partial/footer.ejs
@@ -1,5 +1,9 @@
 </body>
 <script>
+    function getDelete(id){
+        deleteId = id
+        console.log(deleteId)
+    }
     $('#myModal').on('shown.bs.modal', function () {
         $('#myInput').trigger('focus')
     })
