--- a/24pms/views/projects/overview/view.ejs
+++ b/24pms/views/projects/overview/view.ejs
@@ -1,65 +1,35 @@
 <% include ../../partial/header.ejs %>
     <div class="container-fluid" style="padding-top: 56px">
         <div class="row">
-            <nav class="col-md-2 d-none d-md-block bg-dark sidebar" style="padding-top: 56px">
-                <div class="sidebar-sticky">
-                    <ul class="nav flex-column">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">
-                                Overview <span class="sr-only">(current)</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                Activity
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                Members
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">
-                                Issues
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-                <div style="position: absolute; inset: 0px; overflow: hidden; pointer-events: none; visibility: hidden; z-index: -1;"
-                    class="chartjs-size-monitor">
-                    <div class="chartjs-size-monitor-expand"
-                        style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
-                        <div style="position:absolute;width:1000000px;height:1000000px;left:0;top:0"></div>
+            <% include ../../partial/sidebar.ejs %>
+                <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+                    <div
+                        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                        <h1 class="h2">Overview</h1>
                     </div>
-                    <div class="chartjs-size-monitor-shrink"
-                        style="position:absolute;left:0;top:0;right:0;bottom:0;overflow:hidden;pointer-events:none;visibility:hidden;z-index:-1;">
-                        <div style="position:absolute;width:200%;height:200%;left:0; top:0"></div>
+                    <h3 class="mt-4 mb-3">Library System</h3>
+                    <div class="kotak-content-overview" style="max-width: 1800px;">
+                        <div class="issue-title">Issue tracking</div>
+                        <ul>
+                            <li>Bug: <%=bugOpen%> Open / <%=bugTotal%>
+                            </li>
+                            <li>Feature: <%=featureOpen%> Open / <%=featureTotal%>
+                            </li>
+                            <li>Support: <%=supportOpen%> Open / <%=supportTotal%>
+                            </li>
+                        </ul>
                     </div>
-                </div>
-                <div
-                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Overview</h1>
-                </div>
-                <h3 class="mt-4 mb-3">Library System</h3>
-                <div class="kotak-content-overview" style="max-width: 1800px;">
-                    <div class="issue-title">Issue tracking</div>
-                    <ul>
-                        <li>Bug: 0 Open / 0</li>
-                        <li>Feature: 2 Open / 2</li>
-                        <li>Support: 0 Open / 0</li>
-                    </ul>
-                </div>
-                <div class="kotak-content-overview" style="max-width: 1800px;">
-                    <div class="members-title">Members</div>
-                    <ul>
-                        <li>Ini masih hardcode</li>
-                    </ul>
-                </div>
-            </main>
+                    <div class="kotak-content-overview" style="max-width: 1800px;">
+                        <div class="members-title">Members</div>
+                        <ul>
+                            <% members.forEach((item, index)=>{ %>
+                                <li>
+                                    <%= item.firstname %>
+                                </li>
+                                <% }) %>
+                        </ul>
+                    </div>
+                </main>
         </div>
     </div>
 
