update menu issue

--- a/24pms/views/projects/activity/view.ejs
+++ b/24pms/views/projects/activity/view.ejs
@@ -5,9 +5,9 @@
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                    <h1 class="h2">Members</h1>
+                    <h1 class="h2">Activity</h1>
                 </div>
-                <h3 class="mt-4 mb-3">Library System</h3>
+                <h3 class="mt-4 mb-3">On construction</h3>
 
             </main>
     </div>
