--- a/24pms/views/projects/issues/formEdit.ejs
+++ b/24pms/views/projects/issues/formEdit.ejs
@@ -5,12 +5,27 @@
                 <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
                     <div
                         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                        <h1 class="h2"><a href="/projects/issues/<%=projectid%>"><i
-                                    class="fas fa-arrow-circle-left"></i></a> Add Issue</h1>
+                        <h1 class="h2"><a href="/projects/issues/<%= projectid %>"><i
+                                    class="fas fa-arrow-circle-left"></i></a> Edit Issue</h1>
                     </div>
                     <div class="border rounded p-3" style="max-width: 1200px; margin-bottom: 30px;">
                         <form id="form-add-issue" action="/projects/issues/<%=projectid%>/add" method="POST"
                             encType="multipart/form-data" style="padding:20px 20px;">
+                            <div class="row mb-3 ">
+                                <label for="issueid" class="col-sm-2 col-form-label">Issue ID</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="issueid" name="issueid"
+                                        placeholder="issueid" value="<%= issueid %>" disabled>
+                                </div>
+                            </div>
+                            <div class="row mb-3 ">
+                                <label for="projectid" class="col-sm-2 col-form-label">Project ID</label>
+                                <div class="col-sm-10">
+                                    <input type="text" class="form-control" id="projectid" name="projectid"
+                                        placeholder="projectid" value="<%= projectid %>" disabled>
+                                </div>
+                            </div>
+
                             <div class="row mb-3">
                                 <legend class="col-form-label col-sm-2 pt-0">Tracker</legend>
                                 <div class="col-sm-10">
@@ -136,11 +151,6 @@
                                 <div class="col-sm-9">
                                     <select class="form-control" id="assignee" name="assignee">
                                         <option value="" disabled selected>Choose the assignee ...</option>
-                                        <% members.forEach((item, index)=>{ %>
-                                            <option value="<%= item.userid %>">
-                                                <%= item.firstname %>
-                                            </option>
-                                            <% }) %>
                                     </select>
                                 </div>
                             </div>
