--- a/24pms/views/projects/issues/list.ejs
+++ b/24pms/views/projects/issues/list.ejs
@@ -107,41 +107,8 @@
                                                                     <a class="btn btn-success"
                                                                         href="/projects/issues/<%= projectid %>/edit/<%= item.issueid %>"><i
                                                                             class="fas fa-edit"></i> Edit</a>
-                                                                    <button type="button" class="btn btn-danger"
-                                                                        data-toggle="modal"
-                                                                        data-target="#exampleModal"><i
-                                                                            class="fas fa-trash" onclick=""></i>
-                                                                        Delete</button>
-
-                                                                    <div class="modal fade" id="exampleModal" tabindex="-1"
-                                                                        role="dialog" aria-labelledby="exampleModalLabel"
-                                                                        aria-hidden="true">
-                                                                        <div class="modal-dialog" role="document">
-                                                                            <div class="modal-content">
-                                                                                <div class="modal-header">
-                                                                                    <h5 class="modal-title"
-                                                                                        id="exampleModalLabel">
-                                                                                        Delete Confirmation</h5>
-                                                                                        <button type="button" class="close"
-                                                                                            data-dismiss="modal" aria-label="Close">
-                                                                                            <span aria-hidden="true">&times;</span>
-                                                                                        </button>
-                                                                                </div>
-                                                                                <div class="modal-body">
-                                                                                    Are you sure want to delete this
-                                                                                    issue?
-                                                                                </div>
-                                                                                <div class="modal-footer">
-                                                                                    <button type="button"
-                                                                                        class="btn btn-secondary"
-                                                                                       data-dismiss="modal">No</button>
-                                                                                    <a type="button"
-                                                                                        class="btn btn-primary"
-                                                                                        href="/projects/issues/<%= projectid %>/delete/<%= item.issueid %>">Yes</a>
-                                                                                </div> 
-                                                                            </div>
-                                                                        </div>
-                                                                    </div>
+                                                                    <a class="btn btn-danger" href="/projects/issues/<%= projectid %>/delete/<%= item.issueid %>"><i class="fas fa-trash" onclick=""></i>
+                                                                        Delete</a> 
                                                                 </td>
                                                                 <% } %>
                                 </tr>
