--- a/24pms/views/projects/issues/form.ejs
+++ b/24pms/views/projects/issues/form.ejs
@@ -41,14 +41,14 @@
                                 <label for="subject" class="col-sm-2 col-form-label">Subject</label>
                                 <div class="col-sm-10">
                                     <input type="text" class="form-control" id="subject" name="subject"
-                                        placeholder="Subject">
+                                        placeholder="Subject" required>
                                 </div>
                             </div>
                             <div class="row mb-3">
                                 <label for="description" class="col-sm-2 col-form-label">Description</label>
                                 <div class="col-sm-9">
                                     <textarea type="text" class="form-control" id="description" name="description"
-                                        placeholder="Description"></textarea>
+                                        placeholder="Description" required></textarea>
                                 </div>
                             </div>
                             <div class="row mb-3">
@@ -132,7 +132,7 @@
                                 </div>
                             </div>
                             <div class="row mb-3 align-items-center">
-                                <label for="subject" class="col-sm-2 col-form-label">Assignee</label>
+                                <label for="assignee" class="col-sm-2 col-form-label">Assignee</label>
                                 <div class="col-sm-9">
                                     <select class="form-control" id="assignee" name="assignee">
                                         <option value="" disabled selected>Choose the assignee ...</option>
@@ -145,28 +145,28 @@
                                 </div>
                             </div>
                             <div class="row mb-3 align-items-center">
-                                <label for="subject" class="col-sm-2 col-form-label">Start Date</label>
+                                <label for="startdate" class="col-sm-2 col-form-label">Start Date</label>
                                 <div class="col-sm-10">
                                     <input class="form-control" placeholder="Start date" type="text"
-                                        onfocus="(this.type='date')" id="startdate" name="startdate">
+                                        onfocus="(this.type='date')" id="startdate" name="startdate" required>
                                 </div>
                             </div>
                             <div class="row mb-3 align-items-center">
-                                <label for="subject" class="col-sm-2 col-form-label">Due Date</label>
+                                <label for="duedate" class="col-sm-2 col-form-label">Due Date</label>
                                 <div class="col-sm-10">
                                     <input class="form-control" placeholder="Due date" type="text"
-                                        onfocus="(this.type='date')" id="duedate" name="duedate">
+                                        onfocus="(this.type='date')" id="duedate" name="duedate" required>
                                 </div>
                             </div>
                             <div class="row mb-3 align-items-center">
-                                <label for="subject" class="col-sm-2 col-form-label">Estimated Time</label>
+                                <label for="estimatedtime" class="col-sm-2 col-form-label">Estimated Time</label>
                                 <div class="col-sm-10">
                                     <input type="number" step="any" class="form-control" id="estimatedtime"
-                                        name="estimatedtime" placeholder="Estimated Time">
+                                        name="estimatedtime" placeholder="Estimated Time" required>
                                 </div>
                             </div>
                             <div class="row mb-3 align-items-center">
-                                <label for="subject" class="col-sm-2 col-form-label">% Done</label>
+                                <label for="done" class="col-sm-2 col-form-label">% Done</label>
                                 <div class="col-sm-9">
                                     <select class="form-control" id="done" name="done">
                                         <option value="0" selected>0</option>
@@ -185,7 +185,7 @@
                             </div>
                             <div class="row mb-3">
                                 <div class="col-sm-2">
-                                    <label for="subject" class="col-form-label">Files</label>
+                                    <label for="files" class="col-form-label">Files</label>
                                 </div>
                                 <div class="col-sm-9">
 
